[package]
name = "refresh-test"
version = "0.1.0"
edition = "2024"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "io-std"] }
spotify-rs = { path = "../spotify-rs" }
dotenvy = "0.15.7"
url = "2.5.4"
tracing = "0.1.41"
serde_json = "1.0.140"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
